Bitbee client refactoring